<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_home_32"
        android:title="Home" />
    <item
        android:id="@+id/navigation_nervebot"
        android:icon="@drawable/ic_chatbot"
        android:title="NerveBot" />
    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history"
        android:title="History" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/icon_settings_32"
        android:title="Settings" />
    <item
        android:id="@+id/navigation_rewards"
        android:icon="@drawable/ic_check_circle_green"
        android:title="Récompenses" />
</menu>
